# HackerNewsApp

./: .env  README.md  app.py  article_summarizer.py  database.py  hackernews.db  pyproject.toml  test_ollama.py
exports/: hackernews_summaries.xlsx
